Some fixed i think
